force-app/main/default/objects/cuda_signnow__SignNow__c/cuda_signnow__SignNow__c.object-meta.xml
<CustomObject>
    <description>SignNow</description>
    <label>SignNow</label>
    <nameField>
        <label>SignNow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SignNow</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>