force-app/main/default/objects/cuda_signnow__SignNow__c/fields/cuda_signnow__email__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__email__c</fullName>
    <label>email</label>
    <type>Email</type>
</CustomField>