force-app/main/default/objects/cuda_signnow__SignNow__c/fields/cuda_signnow__Name__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__Name__c</fullName>
    <label>Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>