force-app/main/default/objects/cuda_signnow__SignNow__c/fields/cuda_signnow__number__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__number__c</fullName>
    <label>number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>